syntax = "proto3";
package vip;

option go_package = "github.com/leepala/OldGeneralBackend/Proto/vip";

service vip {
    rpc ChargeVip(ChargeVipRequest) returns (ChargeVipReply) {}
    rpc GetVipStatus(GetVipStatusRequest) returns (GetVipStatusReply) {}
}

message ChargeVipRequest {
    string request_id = 1;
    int64 request_time = 2;
    int64 user_id = 3;
    int64 charge_duration = 4;
}

message ChargeVipReply {
    string request_id = 1;
    int64 reply_time = 2;
}

message GetVipStatusRequest {
    string request_id = 1;
    int64 request_time = 2;
    string user_id = 3;
}

message GetVipStatusReply {
    string request_id = 1;
    int64 reply_time = 2;
    int64 end_time = 3;
}